[gd_scene load_steps=5 format=2]

[ext_resource path="res://palanca.gd" type="Script" id=1]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 37.8597, 38.0851 )

[sub_resource type="RectangleShape2D" id=2]

[sub_resource type="RectangleShape2D" id=3]

[node name="touch_controls" type="Node2D"]
position = Vector2( -3.7948, 0 )
script = ExtResource( 1 )

[node name="palanca" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="palanca"]
modulate = Color( 0.0980392, 0, 0.984314, 1 )
shape = SubResource( 1 )

[node name="left_button" type="TouchScreenButton" parent="."]
position = Vector2( -150.182, -88.8079 )
scale = Vector2( 5, 8 )
shape = SubResource( 2 )
passby_press = true
action = "click_left"

[node name="right_button" type="TouchScreenButton" parent="."]
position = Vector2( 48.3023, -90.5276 )
scale = Vector2( 5, 8 )
shape = SubResource( 2 )
passby_press = true
action = "click_right"

[node name="start_position" type="Position2D" parent="."]

[node name="shoot" type="TouchScreenButton" parent="."]
modulate = Color( 0.996078, 0.905882, 0.0156863, 1 )
position = Vector2( 1065.99, -88.2186 )
scale = Vector2( 8, 8 )
shape = SubResource( 3 )
[connection signal="mouse_entered" from="palanca" to="." method="_on_palanca_mouse_entered"]
[connection signal="mouse_exited" from="palanca" to="." method="_on_palanca_mouse_exited"]
[connection signal="pressed" from="shoot" to="." method="_on_shoot_pressed"]
